 + Fort Mode will now work with more than 2 teams
 + Added "Forts" to map type selection. This makes the mode easier selectable/discoverable. Also the slider can be used to adjust the distance between forts.
 + Render graves behind everything else, so that they can't hide mines etc.
 + Several new sound effects for weapons and utilities
 + Small visual effects enhancements
 + Briefly show theme and music authors in chat at start of game
 * Fixed air-strikes drops being off-center
 * Gameplay fix: Hammer damage is now rounded down. This means it will cause NO DAMAGE to a hedgehog with less than 3 hp.
 * Fixed screenshots being too bright if taken in quick succession
 * Video recording functionality is restored
 * Fixed bee not being affected by wrap world edge while still being thrown
 * Fixed turn not ending when sticky mine was trapped on rubberband
 * Fixed hedgehog-voices missing a response type (Justyouwait/"You're gonna pay for that") on some platforms (e.g. Linux)
 * Fixed SD-flakes of themes not working if regular flakes were disabled
 * Fixed RC planes being able to collect frozen crates
 * Fixed Seduction's "Yoohoo!" sound not playing
 * Fixed Hedgehogs getting hurt while firing deagle / sniper rifle bullet in certains situations
 * Various other fixes

Construction Mode:
 + Added script parameter support:
  + initialenergy: Amount of energy at start
  + energyperround: New energy per round
  + maxenergy: Maximum allowed
 * Costs for weapon and utility crates were all equal
 * Many other fixes and tweaks

Missions and Game Styles:
 + Added Basic Flying Saucer Training
 + Rope-Knocking Challenge was improved (now awards score based on kills and time; taunts for knocking out hedgehogs)
 * Portal Mind Challenge was cleaned up and reworked (especially less awful wording)
 * Fixed TechRacer not recording finish if time was >= 100s
 * Fixed Target Practice missions getting stuck when a target dropped into water